--- a/N15.html
+++ b/N15.html
@@ -14,7 +14,10 @@
             It was decided to preserve one of the locomotives. Originally, E453 "King Arthur" was chosen, to be restored to its LSWR condition. However, due to the lack of an available Drummond Watercart tender, which it had when it entered service, it never came to be. E453 would be scrapped. Instead, One of the Scottish built examples, E777 "Sir Lamiel" was chosen to be preserved. It is currently under restoration at the Great Central Railway.
         </P>
         <img src="https://upload.wikimedia.org/wikipedia/commons/6/67/Restored_locomotive_Sir_Lamiel_2011-07-20.jpg" height="100%" width="100%">
-        <a href=C:\Users\tobia\Documents\GitHub\html-css\j.html>Return to Main Page</a>
+        <footer>
+            <a href=C:\Users\tobia\Documents\GitHub\html-css\j.html>Return to Main Page</a>
+
+        </footer>
 
 
 
@@ -26,3 +29,4 @@
 
 
     </body>
+    </html>
