--- a/S15.html
+++ b/S15.html
@@ -15,8 +15,10 @@
             3 of the SR locomotives can be found on the North Yorkshire Moors railway, number E825, which is operational, E830, which is awaiting restoration, and 841, which is being used as a temporary parts donor. The Last example of the class built, SR 847, can be found on the Bluebell railway, where it is on display in their museum.
         </P>
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/78/LSWR_S15_No._506_at_Ropley.jpg/1280px-LSWR_S15_No._506_at_Ropley.jpg" height="100%" width="100%">
-        <a href=C:\Users\tobia\Documents\GitHub\html-css\j.html>Return to Main Page</a>
-
+<footer>
+    <a href=C:\Users\tobia\Documents\GitHub\html-css\j.html>Return to Main Page</a>
+    </footer>
 
 
     </body>
+    </html>
