--- a/N.html
+++ b/N.html
@@ -13,8 +13,10 @@
            The locomotives would be a frequent sight on the Reading-Tonbridge line, Which the old SECR locomotives such as the Wainwright C class could simply not handle the traffic on anymore. They would also become a common sight on the former LBSCR Network, Working Alongside their K class.
            They where liked by crews, and lasted well into British Rail ownership, All surviving World War 2, having played major roles in keeping the SR running during that period. It wasn't until 1962 when the first N class would be withdrawn from service, with all 80 being gone by 1966. One has been preserved, A874, later 1874 and 31874, at the Mid-Hants railway. It is currently being restored, But its boiler its currently being used on U Class A806.
            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/N_class_1412_breakdown_train.jpg/1920px-N_class_1412_breakdown_train.jpg" height="100%" width="100%">
-           <a href="C:\Users\tobia\Documents\GitHub\html-css\j.html">Return to Main Page</a>
         </P>
+        <footer>
+            <a href=C:\Users\tobia\Documents\GitHub\html-css\j.html>Return to Main Page</a>
+        </footer>
 
 
 
@@ -22,3 +24,4 @@
 
 
     </body>
+    </html>
