--- a/h15.html
+++ b/h15.html
@@ -13,5 +13,8 @@
     Noteably, the later onces built in 1924 had improved largers cabs, which reportedly made it so crews below the height of roughly 1,80M had to stand on a makeshift stool to be able to properly operate the engines.
     All of the H15 would survive into British Rail ownership in 1948. The engines started being withdrawn in 1955, with the last of them lasting until 1961. None have remained in Preservation.</p>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/25/Clapham_Junction_up_Windsor_Line_freight_approaching_geograph-2680961-by-Ben-Brooksbank.jpg/1920px-Clapham_Junction_up_Windsor_Line_freight_approaching_geograph-2680961-by-Ben-Brooksbank.jpg" height="100%" width="100%">
-    <a href="C:\Users\tobia\Documents\GitHub\html-css\j.html">Return to Main Page</a>
+<footer>
+     <a href=C:\Users\tobia\Documents\GitHub\html-css\j.html>Return to Main Page</a>
+     </footer>
 </body>
+</html>
