Updated hopefulyl the final one ong

--- a/N.html
+++ b/N.html
@@ -5,7 +5,8 @@
         <link rel="stylesheet" href=C:\Users\tobia\Documents\GitHub\html-css\graphicdesignismypassion.css>
     </head>
     <body>
-        <H1>Richard Maunsell's N class</H1>
+        <div class="info">
+            <H1>Richard Maunsell's N class</H1>
         <P>Richard Maunsell designed the N class to help modernize the ancient fleet of the SECR in 1917. The prototype was so successful that the British Government ordered kits of these locomotives, Which would be sold to various railways, Including internationally to Ireland.
            16 would be built by the SECR at their works based in Ashford between 1917 and 1923, With 50 out of the 100 kit locomotives being bought by the Southern railway in 1924. These kits were built at Woolwich Royal Arsenal, and assembled at Ashford works.
            In 1932 the SR ordered another 15, which would be built at Ashford works.
@@ -14,8 +15,11 @@
            They where liked by crews, and lasted well into British Rail ownership, All surviving World War 2, having played major roles in keeping the SR running during that period. It wasn't until 1962 when the first N class would be withdrawn from service, with all 80 being gone by 1966. One has been preserved, A874, later 1874 and 31874, at the Mid-Hants railway. It is currently being restored, But its boiler its currently being used on U Class A806.
            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/N_class_1412_breakdown_train.jpg/1920px-N_class_1412_breakdown_train.jpg" height="100%" width="100%">
         </P>
+        </div>
+        
         <footer>
             <a href=C:\Users\tobia\Documents\GitHub\html-css\j.html>Return to Main Page</a>
+            <a href="https://github.com/PurpleIso">My github!</a>
         </footer>
 
 
