--- a/j.html
+++ b/j.html
@@ -6,17 +6,20 @@
     </head>
 
     <body>
-        <h1>Southern Railway Priciple Locomotives</h1>
-        <p>In 1923 the railway grouping act of the United Kingdom would go into effect. This made it so most major railways would be combined into 4 Bigger railways, known as the Big Four. The Southern railway was one of these, being made up out of the former London, Brighton and South Coast railway, London & Southwestern railway & the South Eastern and Chatham Railway.</p>
-        <p>The railway appointed Richard Maunsell to become the Chief mechanical engineer. It was his decision to to have 4 standard designs to help modernize the railway. Instead of designing all new engines, he used 4 slightly older but still modern designs. These where his own N class design of 1917, aswell as 3 Designs from the London & Southwestern railway; Robert Urie's H15 of 1914, the N15 of 1918 and the S15 of 1920.</p>
-        <p>This page is about these 4 locomotive types.</p>
-        <a href="C:\Users\tobia\Documents\GitHub\html-css\h15.html">The H15 "Cathedrals" class</a>
-        <a href="C:\Users\tobia\Documents\GitHub\html-css\N.html">The N "Woolworths" class</a>
-        <a href="C:\Users\tobia\Documents\GitHub\html-css\N15.html">The N15 "King Arthur" class</a>
-        <a href="C:\Users\tobia\Documents\GitHub\html-css\S15.html">The S15 "Goods Arthur" class</a>
-        <a href="C:\Users\tobia\Documents\GitHub\html-css\picturegallery.HTML"> Gallery</a>
+        <div class="info">
+            <h1>Southern Railway Priciple Locomotives</h1>
+            <p>In 1923 the railway grouping act of the United Kingdom would go into effect. This made it so most major railways would be combined into 4 Bigger railways, known as the Big Four. The Southern railway was one of these, being made up out of the former London, Brighton and South Coast railway, London & Southwestern railway & the South Eastern and Chatham Railway.</p>
+            <p>The railway appointed Richard Maunsell to become the Chief mechanical engineer. It was his decision to to have 4 standard designs to help modernize the railway. Instead of designing all new engines, he used 4 slightly older but still modern designs. These where his own N class design of 1917, aswell as 3 Designs from the London & Southwestern railway; Robert Urie's H15 of 1914, the N15 of 1918 and the S15 of 1920.</p>
+            <p>This page is about these 4 locomotive types.</p>
+            <a href="C:\Users\tobia\Documents\GitHub\html-css\h15.html">The H15 "Cathedrals" class</a>
+            <a href="C:\Users\tobia\Documents\GitHub\html-css\N.html">The N "Woolworths" class</a>
+            <a href="C:\Users\tobia\Documents\GitHub\html-css\N15.html">The N15 "King Arthur" class</a>
+            <a href="C:\Users\tobia\Documents\GitHub\html-css\S15.html">The S15 "Goods Arthur" class</a>
+            <a href="C:\Users\tobia\Documents\GitHub\html-css\picturegallery.HTML"> Gallery</a>
+        </div>
+       
         <footer>
-        
+        <a href="https://github.com/PurpleIso">My github!</a>
         </footer>
 
     </body>
