--- a/picturegallery.HTML
+++ b/picturegallery.HTML
@@ -37,6 +37,7 @@
         </div>
         <footer>
             <a href="C:\Users\tobia\Documents\GitHub\html-css\j.html">Return to Main Page</a>
+            <a href="https://github.com/PurpleIso">My github!</a>
         </footer>
 
 
