--- a/N15.html
+++ b/N15.html
@@ -6,6 +6,7 @@
     </head>
 
     <body>
+       <div class="info">
         <h1>Robert Urie's N15 "King Arthurs"</h1>
         <P>In 1918, after the end of the first world war, the LSWR would introduce its class N15, The largest LSWR passenger locomotives ever. They would be heavily based on the H15, with the most notable difference being the size of the driving wheels going from 6ft to 6ft 7inch to allow for higher speeds, and slightly larger cylinders at 22x28 inches.
             Basing them of the H15 class was the right move. The N15 was popular amongst crews, and shared many parts with the H15 and the later S15, allowing for easier maintanance. The 2-cylinder setup made it also much easier to get ready, compared to the at the time more popular 4-cylinder express passenger machines.
@@ -13,10 +14,11 @@
             Out of all of the Southern Priciple Locomotives, the N15 would be the first to start withdrawal. Starting in 1953, British rail would start to replace them with their Standard 5. By 1962, all of them wouldve been withdrawn from BR service.
             It was decided to preserve one of the locomotives. Originally, E453 "King Arthur" was chosen, to be restored to its LSWR condition. However, due to the lack of an available Drummond Watercart tender, which it had when it entered service, it never came to be. E453 would be scrapped. Instead, One of the Scottish built examples, E777 "Sir Lamiel" was chosen to be preserved. It is currently under restoration at the Great Central Railway.
         </P>
+       </div>
         <img src="https://upload.wikimedia.org/wikipedia/commons/6/67/Restored_locomotive_Sir_Lamiel_2011-07-20.jpg" height="100%" width="100%">
         <footer>
             <a href=C:\Users\tobia\Documents\GitHub\html-css\j.html>Return to Main Page</a>
-
+            <a href="https://github.com/PurpleIso">My github!</a>
         </footer>
 
 
