--- a/S15.html
+++ b/S15.html
@@ -6,6 +6,7 @@
     </head>
 
     <body>
+       <div class="info">
         <h1>Robert Urie's S15</h1>
         <P>
             In 1920, the final of Robert Urie's 4-6-0 standard locomotives would be introduced. They had 5ft 7inch driving wheels, and 2 21x28inch cylinders. Urie made the engines 4-6-0s, rather than the more popular 0-8-0 or 2-8-0 wheel configurations for heavy freight engines. This was to allow them to reach greater speeds, so they had the upper hand over the Great Western on fast freight services.
@@ -14,9 +15,11 @@
             A very impressive 7 of these 45 locomotives remain, 2 LSWR built examples and 5 SR built examples. The 2 LSWR engines are E499, which is under restoration, and E506, which is currently operational. both are located at the Mid-Hants railway. Another SR built example can be found there, E828, which is also undergoing restoration.
             3 of the SR locomotives can be found on the North Yorkshire Moors railway, number E825, which is operational, E830, which is awaiting restoration, and 841, which is being used as a temporary parts donor. The Last example of the class built, SR 847, can be found on the Bluebell railway, where it is on display in their museum.
         </P>
+    </div>
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/78/LSWR_S15_No._506_at_Ropley.jpg/1280px-LSWR_S15_No._506_at_Ropley.jpg" height="100%" width="100%">
 <footer>
     <a href=C:\Users\tobia\Documents\GitHub\html-css\j.html>Return to Main Page</a>
+    <a href="https://github.com/PurpleIso">My github!</a>
     </footer>
 
 
