--- a/j.html
+++ b/j.html
@@ -15,7 +15,7 @@
             <a href="C:\Users\tobia\Documents\GitHub\html-css\N.html">The N "Woolworths" class</a>
             <a href="C:\Users\tobia\Documents\GitHub\html-css\N15.html">The N15 "King Arthur" class</a>
             <a href="C:\Users\tobia\Documents\GitHub\html-css\S15.html">The S15 "Goods Arthur" class</a>
-            <a href="C:\Users\tobia\Documents\GitHub\html-css\picturegallery.HTML"> Gallery</a>
+            <a href="C:\Users\tobia\Documents\GitHub\html-css\gallery3.html"> Gallery</a>
         </div>
        
         <footer>
