final release of the final version
sum extras

--- a/N.html
+++ b/N.html
@@ -3,6 +3,7 @@
     <head>
         <title>South Eastern & Chatham Railway N class</title>
         <link rel="stylesheet" href=C:\Users\tobia\Documents\GitHub\html-css\graphicdesignismypassion.css>
+        <link rel="icon" type="image/x-icon" href="C:\Users\tobia\Documents\GitHub\html-css\images.ico">
     </head>
     <body>
         <div class="info">
