--- a/S15.html
+++ b/S15.html
@@ -3,6 +3,7 @@
     <head>
         <title>London & Southwestern railway S15</title>
         <link rel="stylesheet" href=C:\Users\tobia\Documents\GitHub\html-css\graphicdesignismypassion.css>
+        <link rel="icon" type="image/x-icon" href="C:\Users\tobia\Documents\GitHub\html-css\images.ico">
     </head>
 
     <body>
