--- a/gallery3.html
+++ b/gallery3.html
@@ -3,6 +3,7 @@
     <head>
         <title>Picture Gallery</title>
         <link rel="stylesheet" href="graphicdesignismypassion.css">
+        <link rel="icon" type="image/x-icon" href="C:\Users\tobia\Documents\GitHub\html-css\images.ico">
     </head>
     <body>
         <h1>SECR/SR N Class</h1>
