--- a/h15.html
+++ b/h15.html
@@ -3,9 +3,7 @@
     <head>
         <title>London & Southwestern railway H15</title>
         <link rel="stylesheet" href=C:\Users\tobia\Documents\GitHub\html-css\graphicdesignismypassion.css>
-    </head>
-<body>
-<div class="info">
+        <link rel="icon" type="image/x-icon" href="C:\Users\tobia\Documents\GitHub\html-css\images.ico">
     <h1>Robert Urie's H15</h1>
     <p>In 1914, the London & Southwestern railway's chief mechanical engineer, Robert Urie, saw to it that 3 new standard designs would enter service to replace the aging fleet of the LSWR.
     The first of these was the H15, which was designed to do both freight and passenger workings. The first 11 would be completed in 1914 (one being a rebuild of the earlier E14 class of 1905), with more being planned. However, with the outbreak of world war 1, the British government banned railways from building Passenger oriented locomotives, which the H15, with its 6ft driving wheels, fell under.
