--- a/j.html
+++ b/j.html
@@ -3,6 +3,7 @@
     <head>
         <title>The 4 Priciple locomotives of the Southern Railway</title>
         <link rel="stylesheet" href=C:\Users\tobia\Documents\GitHub\html-css\graphicdesignismypassion.css>
+        <link rel="icon" type="image/x-icon" href="C:\Users\tobia\Documents\GitHub\html-css\images.ico">
     </head>
 
     <body>
