final final final version i hope to god
saddasdas

--- a/h15.html
+++ b/h15.html
@@ -16,6 +16,7 @@
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/25/Clapham_Junction_up_Windsor_Line_freight_approaching_geograph-2680961-by-Ben-Brooksbank.jpg/1920px-Clapham_Junction_up_Windsor_Line_freight_approaching_geograph-2680961-by-Ben-Brooksbank.jpg" height="100%" width="100%">
 <footer>
      <a href=C:\Users\tobia\Documents\GitHub\html-css\j.html>Return to Main Page</a>
+     <a href="C:\Users\tobia\Documents\GitHub\html-css\gallery3.html"> Gallery</a>
      <a href="https://github.com/PurpleIso">My github!</a>
      </footer>
 </body>
