--- a/j.html
+++ b/j.html
@@ -17,10 +17,12 @@
             <a href="C:\Users\tobia\Documents\GitHub\html-css\N15.html">The N15 "King Arthur" class</a>
             <a href="C:\Users\tobia\Documents\GitHub\html-css\S15.html">The S15 "Goods Arthur" class</a>
             <a href="C:\Users\tobia\Documents\GitHub\html-css\gallery3.html"> Gallery</a>
+            <a href="https://github.com/PurpleIso">My github!</a>
         </div>
        
         <footer>
-        <a href="https://github.com/PurpleIso">My github!</a>
+        <label for="Email">Email adress for future updates:</label><br>
+        <input type="text" id="Email" name="Email" value="your@email.com"><br>
         </footer>
 
     </body>
