--- a/N.html
+++ b/N.html
@@ -20,6 +20,7 @@
         
         <footer>
             <a href=C:\Users\tobia\Documents\GitHub\html-css\j.html>Return to Main Page</a>
+            <a href="C:\Users\tobia\Documents\GitHub\html-css\gallery3.html"> Gallery</a>
             <a href="https://github.com/PurpleIso">My github!</a>
         </footer>
 
