--- a/N15.html
+++ b/N15.html
@@ -19,6 +19,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/6/67/Restored_locomotive_Sir_Lamiel_2011-07-20.jpg" height="100%" width="100%">
         <footer>
             <a href=C:\Users\tobia\Documents\GitHub\html-css\j.html>Return to Main Page</a>
+            <a href="C:\Users\tobia\Documents\GitHub\html-css\gallery3.html"> Gallery</a>
             <a href="https://github.com/PurpleIso">My github!</a>
         </footer>
 
