--- a/S15.html
+++ b/S15.html
@@ -20,6 +20,7 @@
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/78/LSWR_S15_No._506_at_Ropley.jpg/1280px-LSWR_S15_No._506_at_Ropley.jpg" height="100%" width="100%">
 <footer>
     <a href=C:\Users\tobia\Documents\GitHub\html-css\j.html>Return to Main Page</a>
+    <a href="C:\Users\tobia\Documents\GitHub\html-css\gallery3.html"> Gallery</a>
     <a href="https://github.com/PurpleIso">My github!</a>
     </footer>
 
