finaler final final version i hope
sddasasdasddas

--- a/gallery3.html
+++ b/gallery3.html
@@ -3,7 +3,7 @@
     <head>
         <title>Picture Gallery</title>
         <link rel="stylesheet" href="graphicdesignismypassion.css">
-        <link rel="icon" type="image/x-icon" href="C:\Users\tobia\Documents\GitHub\html-css\images.ico">
+        <link rel="icon" type="image/x-icon" href="images.ico">
     </head>
     <body>
         <h1>SECR/SR N Class</h1>
@@ -71,7 +71,7 @@
         </div>
 
         <footer>
-            <a href="C:\Users\tobia\Documents\GitHub\html-css\j.html">Return to Main Page</a>
+            <a href="j.html">Return to Main Page</a>
             <a href="https://github.com/PurpleIso">My github!</a>
         </footer>
     </body>
