--- a/N.html
+++ b/N.html
@@ -2,8 +2,8 @@
 <html lang="english">
     <head>
         <title>South Eastern & Chatham Railway N class</title>
-        <link rel="stylesheet" href=C:\Users\tobia\Documents\GitHub\html-css\graphicdesignismypassion.css>
-        <link rel="icon" type="image/x-icon" href="C:\Users\tobia\Documents\GitHub\html-css\images.ico">
+        <link rel="stylesheet" href=graphicdesignismypassion.css>
+        <link rel="icon" type="image/x-icon" href="images.ico">
     </head>
     <body>
         <div class="info">
@@ -19,8 +19,8 @@
         </div>
         
         <footer>
-            <a href=C:\Users\tobia\Documents\GitHub\html-css\j.html>Return to Main Page</a>
-            <a href="C:\Users\tobia\Documents\GitHub\html-css\gallery3.html"> Gallery</a>
+            <a href=j.html>Return to Main Page</a>
+            <a href="gallery3.html"> Gallery</a>
             <a href="https://github.com/PurpleIso">My github!</a>
         </footer>
 
