--- a/N15.html
+++ b/N15.html
@@ -2,8 +2,8 @@
 <html lang="english">
     <head>
         <title>London & Southwestern railway N15</title>
-        <link rel="stylesheet" href=C:\Users\tobia\Documents\GitHub\html-css\graphicdesignismypassion.css>
-        <link rel="icon" type="image/x-icon" href="C:\Users\tobia\Documents\GitHub\html-css\images.ico">
+        <link rel="stylesheet" href=graphicdesignismypassion.css>
+        <link rel="icon" type="image/x-icon" href="images.ico">
     </head>
 
     <body>
@@ -18,8 +18,8 @@
        </div>
         <img src="https://upload.wikimedia.org/wikipedia/commons/6/67/Restored_locomotive_Sir_Lamiel_2011-07-20.jpg" height="100%" width="100%">
         <footer>
-            <a href=C:\Users\tobia\Documents\GitHub\html-css\j.html>Return to Main Page</a>
-            <a href="C:\Users\tobia\Documents\GitHub\html-css\gallery3.html"> Gallery</a>
+            <a href=j.html>Return to Main Page</a>
+            <a href="gallery3.html"> Gallery</a>
             <a href="https://github.com/PurpleIso">My github!</a>
         </footer>
 
