--- a/S15.html
+++ b/S15.html
@@ -2,8 +2,8 @@
 <html lang="english">
     <head>
         <title>London & Southwestern railway S15</title>
-        <link rel="stylesheet" href=C:\Users\tobia\Documents\GitHub\html-css\graphicdesignismypassion.css>
-        <link rel="icon" type="image/x-icon" href="C:\Users\tobia\Documents\GitHub\html-css\images.ico">
+        <link rel="stylesheet" href=graphicdesignismypassion.css>
+        <link rel="icon" type="image/x-icon" href="images.ico">
     </head>
 
     <body>
@@ -19,8 +19,8 @@
     </div>
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/78/LSWR_S15_No._506_at_Ropley.jpg/1280px-LSWR_S15_No._506_at_Ropley.jpg" height="100%" width="100%">
 <footer>
-    <a href=C:\Users\tobia\Documents\GitHub\html-css\j.html>Return to Main Page</a>
-    <a href="C:\Users\tobia\Documents\GitHub\html-css\gallery3.html"> Gallery</a>
+    <a href=j.html>Return to Main Page</a>
+    <a href="gallery3.html"> Gallery</a>
     <a href="https://github.com/PurpleIso">My github!</a>
     </footer>
 
