--- a/j.html
+++ b/j.html
@@ -2,8 +2,8 @@
 <html lang="english">
     <head>
         <title>The 4 Priciple locomotives of the Southern Railway</title>
-        <link rel="stylesheet" href=C:\Users\tobia\Documents\GitHub\html-css\graphicdesignismypassion.css>
-        <link rel="icon" type="image/x-icon" href="C:\Users\tobia\Documents\GitHub\html-css\images.ico">
+        <link rel="stylesheet" href=graphicdesignismypassion.css>
+        <link rel="icon" type="image/x-icon" href="graphicdesignismypassion.css">
     </head>
 
     <body>
@@ -12,11 +12,11 @@
             <p>In 1923 the railway grouping act of the United Kingdom would go into effect. This made it so most major railways would be combined into 4 Bigger railways, known as the Big Four. The Southern railway was one of these, being made up out of the former London, Brighton and South Coast railway, London & Southwestern railway & the South Eastern and Chatham Railway.</p>
             <p>The railway appointed Richard Maunsell to become the Chief mechanical engineer. It was his decision to to have 4 standard designs to help modernize the railway. Instead of designing all new engines, he used 4 slightly older but still modern designs. These where his own N class design of 1917, aswell as 3 Designs from the London & Southwestern railway; Robert Urie's H15 of 1914, the N15 of 1918 and the S15 of 1920.</p>
             <p>This page is about these 4 locomotive types.</p>
-            <a href="C:\Users\tobia\Documents\GitHub\html-css\h15.html">The H15 "Cathedrals" class</a>
-            <a href="C:\Users\tobia\Documents\GitHub\html-css\N.html">The N "Woolworths" class</a>
-            <a href="C:\Users\tobia\Documents\GitHub\html-css\N15.html">The N15 "King Arthur" class</a>
-            <a href="C:\Users\tobia\Documents\GitHub\html-css\S15.html">The S15 "Goods Arthur" class</a>
-            <a href="C:\Users\tobia\Documents\GitHub\html-css\gallery3.html"> Gallery</a>
+            <a href="h15.html">The H15 "Cathedrals" class</a>
+            <a href="N.html">The N "Woolworths" class</a>
+            <a href="N15.html">The N15 "King Arthur" class</a>
+            <a href="S15.html">The S15 "Goods Arthur" class</a>
+            <a href="gallery3.html"> Gallery</a>
             <a href="https://github.com/PurpleIso">My github!</a>
         </div>
        
